--- a/PP8 February/App.config
+++ b/PP8 February/App.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="PP8_February.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="PP8_February.Properties.Settings.PP8ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=PP8;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="PP8_February.Properties.Settings.PP8ConnectionString1" connectionString="Data Source=DESKTOP-1KN5R8D;Initial Catalog=PP8;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -48,4 +52,15 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <PP8_February.Properties.Settings>
+      <setting name="Excel_Filename" serializeAs="String">
+        <value>test</value>
+      </setting>
+    </PP8_February.Properties.Settings>
+  </applicationSettings>
+  <appSettings>
+    <!--The license context used-->
+    <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
+  </appSettings>
 </configuration>
