--- a/PP8 February/packages.config
+++ b/PP8 February/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Azure.Core" version="1.25.0" targetFramework="net472" />
   <package id="Azure.Identity" version="1.7.0" targetFramework="net472" />
+  <package id="EPPlus" version="6.1.2" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="5.1.0" targetFramework="net472" />
@@ -14,6 +17,9 @@
   <package id="Microsoft.IdentityModel.Protocols" version="6.24.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.24.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net472" />
