--- a/PP8 February/App.config
+++ b/PP8 February/App.config
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="PP8_February.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <connectionStrings>
-        <add name="PP8_February.Properties.Settings.PP8ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=PP8;Integrated Security=True" providerName="System.Data.SqlClient" />
-        <add name="PP8_February.Properties.Settings.PP8ConnectionString1" connectionString="Data Source=DESKTOP-1KN5R8D;Initial Catalog=PP8;Integrated Security=True" providerName="System.Data.SqlClient" />
-    </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="PP8_February.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="PP8_February.Properties.Settings.PP8ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=PP8;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PP8_February.Properties.Settings.PP8ConnectionString1" connectionString="Data Source=DESKTOP-1KN5R8D;Initial Catalog=PP8;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -63,4 +65,9 @@
     <!--The license context used-->
     <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
   </appSettings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
