--- a/PP8 February/packages.config
+++ b/PP8 February/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Azure.Core" version="1.25.0" targetFramework="net472" />
   <package id="Azure.Identity" version="1.7.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="EPPlus" version="6.1.2" targetFramework="net472" />
   <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net472" />
   <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net472" />
